fix button spacing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -47,6 +47,7 @@ body {
     border-radius: 0px;
     box-shadow: none;
     background-color: white;
+    margin: 5px 0;
   }
   .highlight-img-container{
     padding: 30px 0;
